<resources>

    <string name="app_name">Practica5</string>
    <string name="welcome_text"> Welcome to the Portales! </string>
    <string name="welcome_description"> Taqueria los Portales is a quick, casual restaurant </string>
    <string name="button_start"> get started! </string>


    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="terms">I have read and accept terms and conditions of the Portales </string>
    <string name="sign_in">Sign in</string>


    <string name="our_menu">OUR MENU</string>
    <string name="antojitos">Antojitos</string>
    <string name="especialidades">Especialidades</string>
    <string name="combinations">Combinations</string>
    <string name="tortas">Tortas</string>
    <string name="sopas">Sopas</string>
    <string name="drinks">Drinks</string>
    <string name="descriptive_text_for_image">Descripción de la imagen</string>


</resources>