<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:layout_width="215dp"
        android:layout_height="65dp"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/imagen1"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="37dp"
        android:layout_gravity="center"
        />


    <EditText
        android:id="@+id/name_input"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/input_margin"
        android:hint="@string/name"
        android:inputType="text"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/last_name_layout"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/input_margin"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="@dimen/input_margin"/>

    <EditText

        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/input_margin"/>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="@dimen/input_margin"
        android:textStyle="italic"/>

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="219dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:layout_marginTop="5dp"
        />
</LinearLayout>